Feat: create authentication page signup

--- a/package.json
+++ b/package.json
@@ -4,6 +4,6 @@
     "tailwindcss": "^4.1.18"
   },
   "scripts": {
-    "watch:css" : "npx @tailwindcss/cli -i ./static/src/style.css -o ./static/src/dist/style.css --watch"
+    "dev" : "npx @tailwindcss/cli -i ./static/src/style.css -o ./static/src/dist/style.css --watch"
   }
 }
