--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "tailwindcss": "^4.1.18"
   },
   "scripts": {
-    "dev" : "npx @tailwindcss/cli -i ./static/src/style.css -o ./static/src/dist/style.css --watch"
+    "dev" : "npx @tailwindcss/cli -i ./static/src/style.css -o ./static/src/dist/style.css --watch",
+    "build": "npx @tailwindcss/cli -i ./static/src/style.css -o ./static/src/dist/style.css --minify"
   }
 }
